--- a/炉石页面/index.html
+++ b/炉石页面/index.html
@@ -4,6 +4,11 @@
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <title>首页</title>
+	<style>
+		.xp-image-holder img{
+			width:100%;
+		}
+	</style>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link href="https://fonts.googleapis.com/css?family=Archivo+Black|Arimo:400,700|Poppins:300,400,500,600,700" rel="stylesheet"> 
@@ -82,7 +87,7 @@
                     <div id="owl-vesion1-demo" class="owl-carousel owl-theme">
                         <div class="item">
                             <figure class="xp-image-holder">
-                                <img src="images/home-banner1.jpg" alt="" />
+                                <img src="images/home-banner1.jpg" alt=""/>
                                 <div class="xp-ovrlay"></div>
                                 <figcaption class="xp-text-box">
                                     <div class="child-pernt">
